# -Complete-Veterinary-Team-Services

./: README.md  pyproject.toml
cal/: forms.py  models.py  rep_template.txt  rep_template_unassign.txt  tech_template.txt  urls.py  utils.py  views.py
cal/static/cal/css/: light.css  styles.css
cal/templates/cal/: 404.html  base.html  calendar.html  event.html
djangocalendar/: settings.py  urls.py
notification/: admin.py  models.py  urls.py  views.py
notification/templates/: admin.py  notifications.html
tech/: admin.py  forms.py  models.py  urls.py  views.py
tech/templates/: generic_form_signup.html  generic_form_user.html  index.html  tech.html
vet/: admin.py  forms.py  models.py  urls.py  views.py
vet/templates/: service_form.html  vet.html
