[tool.poetry]
name = "cvts"
version = "0.1.0"
description = ""
authors = ["Patrick Buzzo <pbuzzo04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.8"
phonenumbers = "^8.12.6"
pillow = "^7.2.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
